# llama.cpp-OAI-interface

./: pyproject.toml
api_like_oai/: main.py
