[tool.poetry]
name = "api-like-oai"
version = "0.1.0"
description = ""
authors = ["LAPTOP-GEO7GTHH <ibrahim.syah.q@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
